- fix quickactions z-index #2112

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1090,7 +1090,7 @@ td.pulse-off input {
 
 .quick-actions-dropdown {
     position: absolute;
-    z-index:1;
+    z-index:10;
     width: 100%;
     right: 0;
     top: 100%;
